# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2001 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  25 Nov 2001; emerge's info file detection code has been improved.  

* portage 1.7.3 (20 Nov 2001)

  20 Nov 2001; pdb, pdb.cgi and xpak used /usr/bin/python instead of
  /usr/bin/spython.  Fixed.

* portage 1.7.2 (13 Nov 2001)

  13 Nov 2001; Aron Griffis (agriffis@gentoo.org): emake will now try to build
  in parallel, and if it fails, will retry in non-parallel mode.
  
  13 Nov 2001; ebuild.sh: an ebuild that used an archive with a name that was
  part of another archive would cause Portage to mess up the digest check.  No
  longer.

  31 Oct 2001; Donny Davies (woodchip@gentoo.org): make.conf, make.globals:
  comments about merging the fetch programs before trying to use them.

* portage 1.7.1 (30 Oct 2001)

  30 Oct 2001; portage.py: I accidentally broke "=" deps by being sloppy when
  I added "*" deps.  Trivial fix applied.

* portage 1.7 (29 Oct 2001)

  29 Oct 2001; portage.py: strange typo fix in the empty() digraph method.

* portage 1.6.12 (29 Oct 2001)

  29 Oct 2001; portage.py: "*" deps now implemented. "=sys/foo-1*" matches the
  latest 1.x version/rev of sys/foo, but will not match a 2.x version.

  26 Oct 2001; portage.py: various new categories added.

Portage 1.6.11, released 18 Oct 2001
====================================

	*portage.py; device nodes are now not unmerged at all.


Portage 1.6.10, released 18 Oct 2001 
===================================

	*ebuild.sh: A and AA fix; now any A="foo" lines in the ebuild are ignored,
	allowing ebuilds with them to continue working.
	
	*portage.py: remove gnome-apps, gnome-office, gnome-libs, add gnome-extra
	categories.

	*ebuild.sh, portage.py: You can now use USE variables in SRC_URI to
	conditionally include archives.  In MAINTAINER mode, all archives are